k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: tinystatus-deployment
  labels:
    app: tinystatus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinystatus
  template:
    metadata:
      labels:
        app: tinystatus
    spec:
      containers:
      - name: tinystatus
        image: 987257394635.dkr.ecr.us-east-1.amazonaws.com/tinystatus
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/app/checks.yaml
          subPath: checks.yaml
      volumes:
      - name: config-volume
        configMap:
          name: tinystatus-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: tinystatus-service
  labels:
    app: tinystatus
spec:
  selector:
    app: tinystatus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tinystatus-ui-virtualservice
  namespace: dev
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tinystatus/
    rewrite:
        uri: /
    route:
    - destination:
        port:
          number: 80
        host: tinystatus-service.dev.svc.cluster.local
    timeout: 300s
